# appdata

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
appdata/: __init__.py  file_store.py  kv_store.py  store.py
examples/: main.py  with_dataclass.py
examples/my_app_data_dir/: my_store  some_file.txt
