[tool.poetry]
name = "py-appdata"
version = "0.0.1"
description = ""
authors = ["Jesper Jensen <mail@jeshj.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
orjson = "^3.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
